fix deprecation for JWTUtil & improve Unit Test by using Enums in a better way